[package]
name = "field_block"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A definition language for buffer parsing"
repository = "https://github.com/Banyc/field_block"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octets = "0.2.0"
